<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nanodegree.dnl.bakingapp.ui.StepDetailFragment">

    <RelativeLayout
        android:id="@+id/player_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/media_player_height"
        android:padding="@dimen/default_margin">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/no_media_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_recipe_placeholder"
            android:visibility="gone" />

    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        app:cardElevation="@dimen/card_elevation">

        <TextView
            android:id="@+id/step_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </android.support.v7.widget.CardView>
</LinearLayout>
