<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/content_margin_small"
        android:layout_weight="1"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </ScrollView>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/content_margin_small"
        android:layout_weight="1"
        app:cardElevation="@dimen/card_elevation"
        app:cardUseCompatPadding="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/recycler_view_item_step" />
    </android.support.v7.widget.CardView>

</LinearLayout>
