...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/previous_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_margin"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_left" />

...
                    android:gravity="center"
                    android:padding="8dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/next_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_margin"
                    android:src="@drawable/ic_arrow_right" />

            </LinearLayout>
...
